<resources>
    <string name="app_name">TruthGame</string>
    <string name="title_section1">Игра</string>
    <string name="title_section2">Правила</string>
    <string name="title_section3">Больше</string>
    <string name="rules_steps">Шаги</string>
    <string name="rules_types">Типы карт</string>
    <string name="rules_chips">Фишки</string>
    <string name="action_settings">Settings</string>
    <string name="rules_steps_text"> 1) Игроки садятся в круг и по очереди крутят волчок\n2) Согласно выпавшему цвету, игрок отвечает на вопрос с открывшейся карты\n3) Вопрос с карты задается человеку, сидящему слева</string>
    <string name="rules_text">Желтая колода - неловкие вопросы\nКрасная колода - откровенные вопросы\nСиняя колода - вопросы \"на подумать\"\nБелая колода - игрок задает вопрос от себя\nВнимание: цвет карты генерируется случайным образом!</string>
    <string name="rules_chips_text">Иногда на картах будет появляться картинка с действием. Джокер - игрок должен открыть книгу/газету/сайт/журнал и задать вопрос, 
        который содержит любое слово из первого предложения, попавшегося на глаза.</string>
    <string name="action_begin_text">Нажмите на волчок\nчтобы запустить его!</string>
    <string name="action_progress_text">Волчок крутится...</string>
    <string name="online_answer">#TruthGame Игра в правду на Андроид http://goo.gl/myifN\nМой ответ на вопрос:</string>
    <string name="send_via">Ответить в:</string>
    <string name="rate_button">Оценить игру</string>
    <string name="connection">Авторизация</string>
    <string name="connecting_auth">Подключение...</string>
    <string name="welcome">Приветствие!</string>
    <string name="gplus_error_code">G+ error code:</string>
    <string name="gplus_null">G+ is null</string>
    <string name="disconnected">Отключено</string>
    <string name="error_code">Error code:</string>
    <string name="logout">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="loading">Загрузка аватара...</string>
    <string name="game_title">Игра в правду</string>
    <string name="button_leter">Позже</string>
    <string name="rate_title_text">Оцените Игру в правду</string>
    <string name="rate_content_text">Если Вам понравилась Игра, оцените ее в 5 звезд на следующем экране :)</string>
    <string name="rate_ok_text">Оценить</string>
    <string name="rate_later_text">Позже</string>
    <string name="rate_never_text">Спрятать</string>
    <string name="dialog_exit_title">Вы уверены что хотите выйти?</string>
    <string name="dialog_exit_text">Желаем Вам приятного дня!\nВозвращайтесь скорее и раскажите\nдрузьям об этом приложении!</string>
    <string name="dialog_ok_button">ОК</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="dialog_donate_title">Поддержите разработчика!</string>
    <string name="dialog_donate_card">5168 7423 2150 5178</string>
    <string name="dialog_donate_name">\n\nСкричевский Михаил Вадимович\n\n</string>
    <string name="dialog_donate_text">Эта игра для вас всегда будет бесплатна и без рекламы. Пожалуйста, поддержите разработчика прямым переводом любой суммы на карту ПриватБанка:\n\n</string>
    <string name="dialog_donate_thanks">Большое спасибо!</string>
    <string-array name="actions">
        <item name="action_yellow">Выпал желтый цвет!</item>
        <item name="action_red">Выпал красный цвет!</item>
        <item name="action_blue">Выпал синий цвет!</item>
        <item name="action_white">Выпал белый цвет!</item>
    </string-array>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel_string">Ответить онлайн</string>
    <string name="ok_string">Крутить волчок</string>
    <string name="red_question_title">Откровенный вопрос</string>
    <string name="yellow_question_title">Неловкий вопрос</string>
    <string name="blue_question_title">Вопрос на подумать</string>
    <string name="white_question_title">Свободый вопрос</string>
    <string name="white_question">Задайте вопрос от себя!</string>
    <string-array name="more_titles">
        <item>Quezzle</item>
        <item>Top Quotes</item>
        <item>Cartoon Quotes</item>
        <item>Brain Break</item>
        <item>Skylion Apps Вконтакте</item>
    </string-array>
    <string-array name="more_descr">
        <item>Приложение соединяет Вас с теми, кто рядом, и лучшее его применение - найти компанию в людном месте, на ивенте, в ресторане в университете, клубе или на концерте.</item>
        <item>Лучшие цитаты из Ваших любимых сериалов абсолютно бесплатно и без подключения к интернету</item>
        <item>Чтение цитат из любимых мультсериалов без подключения к интернету</item>
        <item>Минимизируйте стресс и улучшайте свою производительность</item>
        <item>Официальная группа разработчика Вконтакте</item>
    </string-array>
    <string-array name="more_img">
        <item>@drawable/quezzle</item>
        <item>@drawable/topquotes</item>
        <item>@drawable/cartoon</item>
        <item>@drawable/brainbreak</item>
        <item>@drawable/android</item>
    </string-array>
    <string-array name="more_links">
        <item>https://play.google.com/store/apps/details?id=com.skylion.quezzle</item>
        <item>https://play.google.com/store/apps/details?id=top.quotes.pkg</item>
        <item>https://play.google.com/store/apps/details?id=com.skylion.cartoon</item>
        <item>https://play.google.com/store/apps/details?id=com.primerworldapps.brainbreak</item>
        <item>https://vk.com/top_quotes_apps</item>
    </string-array>
    <string name="rate_link">https://play.google.com/store/apps/details?id=com.primerworldapps.truthgame</string>
</resources>